# qt-videoplayer

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.cpp  player.ui
.github/workflows/: ci.yml
include/: videoplayer_window.h
src/: main.cpp  videoplayer_window.cpp
tests/: test_videoplayer_window.cpp
